[package]
name = "filelock-rs"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
description = "Minimal Rust library that provides functionality for managing PID files and file locks."
readme = "README.md"
homepage = "https://github.com/rsmicro/fd-lock"
repository = "https://github.com/rsmicro/fd-lock.git"
license = "GPL-2.0"

[dependencies]
libc = "0.2.146"
